fix: hover modal on ios

--- a/src/app/settings/settings-overview/settings-overview.component.scss
+++ b/src/app/settings/settings-overview/settings-overview.component.scss
@@ -1,7 +1,30 @@
-.blacklist {
-  .body {
-    padding: 5px;
-    max-height: 300px;
-    overflow: auto;
+.container {
+  height: 100%;
+  min-height: 85vh;
+  padding: 25px;
+
+  .blacklist {
+    .body {
+      padding: 5px;
+      max-height: 300px;
+      overflow: auto;
+    }
+  }
+  .a1{display: flex;
+    text-align: center;
+    justify-content: center;}
+
+  .a2{background-color: #808080;
+    border-radius: 0px 6px 6px 0px;
+    margin: 14.8px 0px 0px -1px;
+    color: white;
+    letter-spacing: 1px;
+    padding: 2.5px 5px 0px 5px;
+    height: 21.5px;
+    transform: skew(170deg);}
+
+  .crown {
+    font-size: 50px;
+    color: #FFD114;
   }
 }
