--- a/src/app/wallet/wallet-overview/wallet-overview.component.scss
+++ b/src/app/wallet/wallet-overview/wallet-overview.component.scss
@@ -105,6 +105,10 @@
   width: 200px;
 }
 
+.guard {
+  width: 200px;
+}
+
 @media only screen and (max-width: 768px) { //mobile
   .wallet-overview {
     flex-direction: column;
