--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -18,6 +18,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
+    z-index: 10;
     &::after {
       content: "";
       position: absolute;
@@ -33,7 +34,7 @@
     position: relative;
     top: 0;
     margin: 0 auto;
-    z-index: 9999;
+    z-index: 99;
     padding: 10px;
     background: #fff;
     max-width: 90%;
